--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
   <h1 class="display-3">Secrets</h1>
   <p class="lead">Don't keep your secrets, share them anonymously!</p>
   <hr />
-  <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-  <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+  <a class="btn btn-light btn-lg btn-register" href="/register" role="button">Register</a>
+  <a class="btn btn-dark btn-lg btn-login" href="/login" role="button">Login</a>
 </div>
 <%- include('partials/footer') %>
