--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
   <h1>Login</h1>
   <div class="row">
     <div class="col-sm-8">
-      <div class="card">
+      <div class="card login-register-card">
         <div class="card-body">
           <!-- Makes POST request to /login route -->
           <form action="/login" method="POST">
@@ -21,16 +21,28 @@
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
+    <div class="col-sm-4">
+      <div class="card social-block">
+        <div class="card-body d-grid gap-2">
+          <a
+            class="btn btn-block btn-social btn-google btn-lg"
+            href="/auth/google"
+            role="button">
             <i class="fab fa-google"></i>
             Sign In with Google
           </a>
         </div>
+        <div class="card-body d-grid gap-2">
+          <a
+            class="btn btn-block btn-social btn-facebook btn-lg"
+            href="/auth/facebook"
+            role="button">
+            <i class="fab fa-facebook"></i>
+            Sign In with Facebook
+          </a>
+        </div>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
 <%- include('partials/footer') %>
